[metadata]
name = dsmtpd
version = attr: dsmtpd.__version__
url = https://github.com/matrixise/dsmtpd
description = Simple SMTP Server for debugging
long_description = file: README.rst, CHANGES.rst
long_description_content_type = text/x-rst
author = Stéphane Wirtel
author_email = stephane@wirtel.be
project_urls =
    Source = https://github.com/matrixise/dsmtpd
    Tracker = https://github.com/matrixise/dsmtpd/issues
license = BSD
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Communications :: Email

[options]
packages = find:
include_package_data = True
python_requires = >= 3.6

[options.packages.find]
exclude = 
    tests

[options.entry_points]
console_scripts =
    dsmtpd = dsmtpd.__main__:main

[bdist_wheel]
universal = 0
